package be.billfoldit;

public enum SpendingsCategory {
	SALARY, CHARGES, RENT, VEHICLE, TRANSPORT, FOOD, HOBBIES, HEALTH, OTHER
}
